# ImageRater

./: .gitignore  README.md  main.py  pyproject.toml
src/: CNN_Trainer.py  ImageRater.py  Predictor.py  Trainer.py  XGBoost_Trainer.py  dataset_creator.py  train_test_splitter.py
