[project]
name = "imagerater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "keras>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "six>=1.17.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "xgboost>=3.0.2",
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
